<resources>
    <string name="app_name">Kamus_Istilah</string>
    <string name="title_activity_main">Kamus Istilah</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Kamus IT</string>
    <string name="title_activity_cari">Cari Istilah</string>
    <string name="title_activity_panduan">Panduan</string>
    <string name="title_activity_tentang">Tentang</string>
    <string name="title_activity_arti">Detail</string>
    <string name="empty">Data Tidak Ditemukan !!!</string>
    <string name="search">Cari Istilah.......</string>
    <string name="arti">arti</string>
    <string name="istilah">istilah</string>
    <string name="definisi">Definisi :</string>
    <string name="cari_istilah">CARI ISTILAH</string>
    <string name="btn_panduan">PANDUAN</string>
    <string name="btn_tentang">TENTANG</string>
</resources>
