<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#d7e4da"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ahmad.darmadi.ArtiActivity">

    <TextView
        android:id="@+id/istilah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/istilah"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/definisi"
        android:id="@+id/textView"
        android:textColor="#51bd1f"
        android:layout_below="@+id/istilah"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/arti"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:textSize="18sp"
        android:text="@string/arti"
        android:background="@color/switch_thumb_normal_material_dark"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_below="@+id/istilah"
         android:layout_marginTop="30dp"
        android:textStyle="normal" />


</RelativeLayout>
